<resources>
    <string name="app_name">TikTokApplication</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_add_hashtag">Add hashtag</string>
    <string name="menu_remove_hashtag">Remove hashtag</string>
    <string name="menu_register">Register</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_capture">Capture</string>
    <string name="menu_upload">Upload</string>
    <string name="menu_play">Play</string>

</resources>