<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_capture"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_capture" />

        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />

        <item
            android:id="@+id/nav_play"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_play" />

        <item
            android:id="@+id/nav_remove_hashtag"
            android:icon="@drawable/ic_baseline_remove_circle_24"
            android:title="@string/menu_remove_hashtag" />

        <item
            android:id="@+id/nav_add_hashtag"
            android:icon="@drawable/ic_baseline_add_circle_24"
            android:title="@string/menu_add_hashtag" />
        
        <item
            android:id="@+id/nav_register"
            android:icon="@drawable/ic_baseline_how_to_reg_24"
            android:title="@string/menu_register" />

        <item
            android:id="@+id/nav_disconnect"
            android:icon="@drawable/ic_baseline_person_remove_alt_1_24"
            android:title="@string/menu_disconnect" />

    </group>

</menu>